added db interaction

--- a/orders/templates/index.html
+++ b/orders/templates/index.html
@@ -22,5 +22,6 @@
 <body>
     <h1>Welcome to Order Manager!</h1>
     <p>Your app is running successfully on Render.</p>
+    <a href="{% url 'orders:orders' %}">Start Ordering</a>
 </body>
 </html>
