Added some CRUD functionality

--- a/orders/templates/index.html
+++ b/orders/templates/index.html
@@ -22,6 +22,7 @@
 <body>
     <h1>Welcome to Order Manager!</h1>
     <p>Your app is running successfully on Render.</p>
-    <a href="{% url 'orders:orders' %}">Start Ordering</a>
+    <a href="{% url 'orders:display_orders' %}">Register Orders</a>
+    <a href="{% url 'orders:display_products' %}">Add products</a>
 </body>
 </html>
